[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphapulldown-input-parser"
version = "0.1.0"
description = "Fold specification parser shared by AlphaPulldown tooling"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Kosinski Lab", email = "alphapulldown@embl-hamburg.de"}
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/KosinskiLab/alphapulldown-input-parser"
Issues = "https://github.com/KosinskiLab/alphapulldown-input-parser/issues"

[tool.setuptools.packages.find]
where = ["src"]
